--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -890,12 +890,12 @@
         "df.head() # shows that neighborhood is categorical"
       ],
       "metadata": {
-        "id": "tK8ovSmVMSXo",
-        "outputId": "5eb2c772-bdbb-49eb-9ac8-829102bd1548",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        }
+        },
+        "id": "tK8ovSmVMSXo",
+        "outputId": "5eb2c772-bdbb-49eb-9ac8-829102bd1548"
       },
       "id": "tK8ovSmVMSXo",
       "execution_count": 14,
@@ -1291,11 +1291,11 @@
         "print(reg.intercept_)"
       ],
       "metadata": {
-        "id": "T0-rr7F6UOih",
-        "outputId": "8c16d8e1-b9fa-4d63-a3c2-0f6cd7abf96f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "T0-rr7F6UOih",
+        "outputId": "8c16d8e1-b9fa-4d63-a3c2-0f6cd7abf96f"
       },
       "id": "T0-rr7F6UOih",
       "execution_count": 22,
@@ -1312,6 +1312,20 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "# The intercept is the coefficient of the Bronx category that was take out.\n",
+        "# The coefficents in this new regression are relative to the Bronx category that was taken out.\n",
+        "# The coefficients from part 2 can be obtained by adding the coefficient values given in this regression to the intercept value."
+      ],
+      "metadata": {
+        "id": "x_AaRZv1UnBT"
+      },
+      "id": "x_AaRZv1UnBT",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "### 4. Split the sample 80/20 into a training and a test set. Run a regression of Price on Review Scores Rating and Neighbourhood . What is the and RMSE on the test set? What is the coefficient on Review Scores Rating? What is the most expensive kind of property you can rent?"
@@ -1320,6 +1334,115 @@
         "id": "-ZKQr-3zJet-"
       },
       "id": "-ZKQr-3zJet-"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn import linear_model\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "\n",
+        "# y=price, x=review scores rating, neighbourhood\n",
+        "X = df.loc[:, ['Review Scores Rating', 'Neighbourhood ']]\n",
+        "y = df['Price']\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X,y, test_size=0.2, random_state = 100)\n",
+        "\n",
+        "Z_train = pd.concat([X_train['Review Scores Rating'], pd.get_dummies(X_train['Neighbourhood '], dtype='int')], axis = 1)\n",
+        "Z_test = pd.concat([X_test['Review Scores Rating'], pd.get_dummies(X_test['Neighbourhood '], dtype='int')], axis = 1)\n",
+        "\n",
+        "reg = linear_model.LinearRegression(fit_intercept = False).fit(Z_train, y_train)"
+      ],
+      "metadata": {
+        "id": "6ckGdnMiVNN2"
+      },
+      "id": "6ckGdnMiVNN2",
+      "execution_count": 23,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y_hat = reg.predict(Z_test)\n",
+        "print('Rsq: ', reg.score(Z_test, y_test))\n",
+        "rmse = np.sqrt(np.mean((y_test-y_hat)**2))\n",
+        "print('RMSE: ', rmse)"
+      ],
+      "metadata": {
+        "id": "nGEGS8eAfK-g",
+        "outputId": "2416f38e-ff84-4eb4-9afa-b344a3c3cd58",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "nGEGS8eAfK-g",
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Rsq:  0.06701086106947296\n",
+            "RMSE:  125.01092061382933\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(reg.feature_names_in_)\n",
+        "print(reg.coef_)"
+      ],
+      "metadata": {
+        "id": "dJRM9XEYfcet",
+        "outputId": "69796e89-163b-4b33-859b-4bb6c692f18d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "dJRM9XEYfcet",
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['Review Scores Rating' 'Bronx' 'Brooklyn' 'Manhattan' 'Queens'\n",
+            " 'Staten Island']\n",
+            "[  1.03225688 -17.26139174  32.18088846  89.42102023   4.05020819\n",
+            "  61.57639312]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# What is the and RMSE on the test set? What is the coefficient on Review Scores Rating? What is the most expensive kind of property you can rent?\n",
+        "# The coefficient on Review Scores Rating is 1.03.\n",
+        "# The most expensive property you can rent is a place in Manhattan at $192.63.\n",
+        "100*1.032257 + 89.4"
+      ],
+      "metadata": {
+        "id": "a4bqPYa9gDj_",
+        "outputId": "123e5f4a-5f8f-4e2e-99ed-506f6a550bd2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "a4bqPYa9gDj_",
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "192.6257"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
     },
     {
       "cell_type": "markdown",
