--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -46,10 +46,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7i43jXGG8RUF",
-        "outputId": "fe9bc9ee-0559-4ae7-ae95-09f2357a9577"
+        "outputId": "395aa775-2593-454c-ae7e-fabc15a7b44e"
       },
       "id": "7i43jXGG8RUF",
-      "execution_count": 1,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -61,7 +61,7 @@
             "remote: Counting objects: 100% (11/11), done.\u001b[K\n",
             "remote: Compressing objects: 100% (9/9), done.\u001b[K\n",
             "remote: Total 42 (delta 6), reused 2 (delta 2), pack-reused 31\u001b[K\n",
-            "Receiving objects: 100% (42/42), 2.49 MiB | 5.46 MiB/s, done.\n",
+            "Receiving objects: 100% (42/42), 2.49 MiB | 14.17 MiB/s, done.\n",
             "Resolving deltas: 100% (8/8), done.\n"
           ]
         }
@@ -92,10 +92,10 @@
           "height": 206
         },
         "id": "_QPJ1IY4-FGr",
-        "outputId": "cf4fd1cf-f518-4509-f461-2437ec1d4d7e"
+        "outputId": "2d19d67f-291d-40b0-9ff2-adffe4a9454f"
       },
       "id": "_QPJ1IY4-FGr",
-      "execution_count": 6,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -110,7 +110,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-5ce93858-8e60-4c94-8d42-5dfd84ed895e\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-65b0e859-a0e9-4b6e-a02e-e947e7c5022b\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -183,7 +183,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-5ce93858-8e60-4c94-8d42-5dfd84ed895e')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-65b0e859-a0e9-4b6e-a02e-e947e7c5022b')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -235,12 +235,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-5ce93858-8e60-4c94-8d42-5dfd84ed895e button.colab-df-convert');\n",
+              "        document.querySelector('#df-65b0e859-a0e9-4b6e-a02e-e947e7c5022b button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-5ce93858-8e60-4c94-8d42-5dfd84ed895e');\n",
+              "        const element = document.querySelector('#df-65b0e859-a0e9-4b6e-a02e-e947e7c5022b');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -260,8 +260,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-1c60a044-02fc-4939-8931-5d14d8350a6a\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-1c60a044-02fc-4939-8931-5d14d8350a6a')\"\n",
+              "<div id=\"df-c21677d1-f6c6-4e99-81b7-e3b43c689986\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-c21677d1-f6c6-4e99-81b7-e3b43c689986')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -380,7 +380,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-1c60a044-02fc-4939-8931-5d14d8350a6a button');\n",
+              "        document.querySelector('#df-c21677d1-f6c6-4e99-81b7-e3b43c689986 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -396,7 +396,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 4
         }
       ]
     },
@@ -412,10 +412,10 @@
           "height": 269
         },
         "id": "FP4_VRhsGy9u",
-        "outputId": "bb910019-d9bd-44d1-bb92-1fb12d271202"
+        "outputId": "87896bd8-07cd-47e1-c6c4-c09c79e72f6e"
       },
       "id": "FP4_VRhsGy9u",
-      "execution_count": 9,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -441,7 +441,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-4b7fce9f-f099-4312-963e-26f7dd95c578\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-c7b50964-4376-4e11-9e14-5b71c767e196\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -551,7 +551,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-4b7fce9f-f099-4312-963e-26f7dd95c578')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c7b50964-4376-4e11-9e14-5b71c767e196')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -603,12 +603,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-4b7fce9f-f099-4312-963e-26f7dd95c578 button.colab-df-convert');\n",
+              "        document.querySelector('#df-c7b50964-4376-4e11-9e14-5b71c767e196 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-4b7fce9f-f099-4312-963e-26f7dd95c578');\n",
+              "        const element = document.querySelector('#df-c7b50964-4376-4e11-9e14-5b71c767e196');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -628,8 +628,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-fd814c80-ef0c-4ce1-885f-f8696e06db50\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-fd814c80-ef0c-4ce1-885f-f8696e06db50')\"\n",
+              "<div id=\"df-fe6ab6c0-16a0-4a7d-a60d-c458311cdb5a\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-fe6ab6c0-16a0-4a7d-a60d-c458311cdb5a')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -748,7 +748,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-fd814c80-ef0c-4ce1-885f-f8696e06db50 button');\n",
+              "        document.querySelector('#df-fe6ab6c0-16a0-4a7d-a60d-c458311cdb5a button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -763,7 +763,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 5
         }
       ]
     },
@@ -793,10 +793,10 @@
           "height": 466
         },
         "id": "L_FAbEFDK7xV",
-        "outputId": "dec45f0f-7b7b-478d-ca5b-c9a9454ba89e"
+        "outputId": "0a1c2683-afa6-4e7e-ae25-4994df869ccb"
       },
       "id": "L_FAbEFDK7xV",
-      "execution_count": 10,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -806,7 +806,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 6
         },
         {
           "output_type": "display_data",
@@ -833,10 +833,10 @@
           "height": 466
         },
         "id": "ZHh5dceNLbfa",
-        "outputId": "10668330-f791-4a71-addf-0dcaf2353c99"
+        "outputId": "cf00a15a-6e01-4268-93c2-1799ab4099e4"
       },
       "id": "ZHh5dceNLbfa",
-      "execution_count": 12,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -846,7 +846,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 7
         },
         {
           "output_type": "display_data",
@@ -895,10 +895,10 @@
           "height": 206
         },
         "id": "tK8ovSmVMSXo",
-        "outputId": "5eb2c772-bdbb-49eb-9ac8-829102bd1548"
+        "outputId": "6512c292-21a3-473d-8018-e353c20df9c6"
       },
       "id": "tK8ovSmVMSXo",
-      "execution_count": 14,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -913,7 +913,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-6fb18ee0-87fe-41a0-85be-93f92dc8a0de\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-50748c1b-0e26-4720-9d6b-a77524949f5b\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -986,7 +986,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-6fb18ee0-87fe-41a0-85be-93f92dc8a0de')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-50748c1b-0e26-4720-9d6b-a77524949f5b')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1038,12 +1038,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-6fb18ee0-87fe-41a0-85be-93f92dc8a0de button.colab-df-convert');\n",
+              "        document.querySelector('#df-50748c1b-0e26-4720-9d6b-a77524949f5b button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-6fb18ee0-87fe-41a0-85be-93f92dc8a0de');\n",
+              "        const element = document.querySelector('#df-50748c1b-0e26-4720-9d6b-a77524949f5b');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1063,8 +1063,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-15070c5e-dc65-4402-9c6b-836bbdd37299\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-15070c5e-dc65-4402-9c6b-836bbdd37299')\"\n",
+              "<div id=\"df-c2f3dd7c-b8ea-4cd0-aca4-0ea9d8e74685\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-c2f3dd7c-b8ea-4cd0-aca4-0ea9d8e74685')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1183,7 +1183,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-15070c5e-dc65-4402-9c6b-836bbdd37299 button');\n",
+              "        document.querySelector('#df-c2f3dd7c-b8ea-4cd0-aca4-0ea9d8e74685 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -1199,7 +1199,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 8
         }
       ]
     },
@@ -1217,7 +1217,7 @@
         "id": "S7IpMjauMXxc"
       },
       "id": "S7IpMjauMXxc",
-      "execution_count": 15,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -1231,10 +1231,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ywA8_wvaJGUX",
-        "outputId": "8826d408-68da-47be-a826-e5ede9c51bcc"
+        "outputId": "a5840226-d381-4823-f16e-aec95f888490"
       },
       "id": "ywA8_wvaJGUX",
-      "execution_count": 18,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -1280,7 +1280,7 @@
         "id": "sNjj5kugT0Vs"
       },
       "id": "sNjj5kugT0Vs",
-      "execution_count": 20,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -1295,10 +1295,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "T0-rr7F6UOih",
-        "outputId": "8c16d8e1-b9fa-4d63-a3c2-0f6cd7abf96f"
+        "outputId": "6981929c-4b3b-4f1b-a34b-478cb506913e"
       },
       "id": "T0-rr7F6UOih",
-      "execution_count": 22,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -1355,7 +1355,7 @@
         "id": "6ckGdnMiVNN2"
       },
       "id": "6ckGdnMiVNN2",
-      "execution_count": 23,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -1368,13 +1368,13 @@
       ],
       "metadata": {
         "id": "nGEGS8eAfK-g",
-        "outputId": "2416f38e-ff84-4eb4-9afa-b344a3c3cd58",
+        "outputId": "a04afef1-01c7-4ed7-8524-59c712a172e7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "nGEGS8eAfK-g",
-      "execution_count": 24,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -1394,13 +1394,13 @@
       ],
       "metadata": {
         "id": "dJRM9XEYfcet",
-        "outputId": "69796e89-163b-4b33-859b-4bb6c692f18d",
+        "outputId": "1aaaeb40-ad3e-49e3-8893-36a4e99132b1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "dJRM9XEYfcet",
-      "execution_count": 25,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -1424,13 +1424,13 @@
       ],
       "metadata": {
         "id": "a4bqPYa9gDj_",
-        "outputId": "123e5f4a-5f8f-4e2e-99ed-506f6a550bd2",
+        "outputId": "c6e9011b-a17d-4bfd-fef7-356a2749787e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "a4bqPYa9gDj_",
-      "execution_count": 27,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1440,7 +1440,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 27
+          "execution_count": 16
         }
       ]
     },
@@ -1453,6 +1453,111 @@
         "id": "xuiOmOPFJp5r"
       },
       "id": "xuiOmOPFJp5r"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X = df.loc[:, ['Review Scores Rating', 'Neighbourhood ', 'Room Type']]\n",
+        "y = df['Price']\n",
+        "\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X,y, test_size = 0.2, random_state=100)\n",
+        "\n",
+        "Z_train = pd.concat([X_train['Review Scores Rating'], pd.get_dummies(X_train['Neighbourhood '], dtype='int'), pd.get_dummies(X_train['Room Type'], dtype='int')], axis = 1)\n",
+        "Z_test = pd.concat([X_test['Review Scores Rating'], pd.get_dummies(X_test['Neighbourhood '], dtype='int'), pd.get_dummies(X_test['Room Type'], dtype='int')], axis = 1)\n",
+        "reg = linear_model.LinearRegression(fit_intercept = False).fit(Z_train, y_train)"
+      ],
+      "metadata": {
+        "id": "zatQ4tG5W2JS"
+      },
+      "id": "zatQ4tG5W2JS",
+      "execution_count": 21,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y_hat = reg.predict(Z_test)\n",
+        "print('Rsq: ', reg.score(Z_test, y_test))\n",
+        "rmse = np.sqrt(np.mean((y_test-y_hat)**2))\n",
+        "print('RMSE: ', rmse)"
+      ],
+      "metadata": {
+        "id": "1_fbKcPuaZbG",
+        "outputId": "71327b7c-0963-4bb0-95b5-522fdcefb86b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "1_fbKcPuaZbG",
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Rsq:  0.22035348129282306\n",
+            "RMSE:  114.27692123130633\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(reg.feature_names_in_)\n",
+        "print(reg.coef_)"
+      ],
+      "metadata": {
+        "id": "rQMBWepqaf7X",
+        "outputId": "23c6ec07-c5ce-413d-ce35-26e2cc6ad093",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "rQMBWepqaf7X",
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['Review Scores Rating' 'Bronx' 'Brooklyn' 'Manhattan' 'Queens'\n",
+            " 'Staten Island' 'Entire home/apt' 'Private room' 'Shared room']\n",
+            "[  0.62691227 -13.02276464  10.37845573  53.69330386  -6.83332984\n",
+            "  50.0030217  110.61781998   3.10134084 -19.500474  ]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# The Rsq and RMSE values can be wseen in the output above.\n",
+        "# The coefficient on Review Scores Rating is 0.627.\n",
+        "# The most expensive property you can rent is an Entire home/apt on Manhattan at $170.57.\n",
+        "110.617+53.69+100*.0626"
+      ],
+      "metadata": {
+        "id": "XWUCQFMAai_h",
+        "outputId": "7698fcc2-79ee-4e07-c544-166720c2d172",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "XWUCQFMAai_h",
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "170.567"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 24
+        }
+      ]
     },
     {
       "cell_type": "markdown",
