--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -1482,11 +1482,11 @@
         "print('RMSE: ', rmse)"
       ],
       "metadata": {
-        "id": "1_fbKcPuaZbG",
-        "outputId": "71327b7c-0963-4bb0-95b5-522fdcefb86b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "1_fbKcPuaZbG",
+        "outputId": "71327b7c-0963-4bb0-95b5-522fdcefb86b"
       },
       "id": "1_fbKcPuaZbG",
       "execution_count": 22,
@@ -1508,11 +1508,11 @@
         "print(reg.coef_)"
       ],
       "metadata": {
-        "id": "rQMBWepqaf7X",
-        "outputId": "23c6ec07-c5ce-413d-ce35-26e2cc6ad093",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "rQMBWepqaf7X",
+        "outputId": "23c6ec07-c5ce-413d-ce35-26e2cc6ad093"
       },
       "id": "rQMBWepqaf7X",
       "execution_count": 23,
@@ -1538,11 +1538,11 @@
         "110.617+53.69+100*.0626"
       ],
       "metadata": {
-        "id": "XWUCQFMAai_h",
-        "outputId": "7698fcc2-79ee-4e07-c544-166720c2d172",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "XWUCQFMAai_h",
+        "outputId": "7698fcc2-79ee-4e07-c544-166720c2d172"
       },
       "id": "XWUCQFMAai_h",
       "execution_count": 24,
@@ -1568,6 +1568,20 @@
         "id": "CbeBmRIAJw9y"
       },
       "id": "CbeBmRIAJw9y"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# From part 4 to 5, the coefficient of Review Scores Rating decreases from 1.03 to 0.63. Part 4 differs from part 5 because we add the variable \"Room Type\" to the regression.\n",
+        "# The coefficient decreases as a result as other variables lose predictive value when other variables like \"Room Type\" are added (some of the price variation now comes from \"Room Type\" now,\n",
+        "# not just \"rating\" and \"neighborhood\"."
+      ],
+      "metadata": {
+        "id": "EWwJrAAvbSLl"
+      },
+      "id": "EWwJrAAvbSLl",
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
