--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -1642,6 +1642,81 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "# Q3"
+      ],
+      "metadata": {
+        "id": "USvCHNyCdXNv"
+      },
+      "id": "USvCHNyCdXNv"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 1. Load the pretrial_data.csv data. Notice that there are nans, but the data are relatively clean. Because there are .nans among variables you won't use, you'll want to narrow down your analysis to the relevant variables before dropping or imputing missing values."
+      ],
+      "metadata": {
+        "id": "vkSz1hqEdRpb"
+      },
+      "id": "vkSz1hqEdRpb"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 2. Create a dummy variable indicating that the defendant is Black."
+      ],
+      "metadata": {
+        "id": "N8NKgqxPdYuS"
+      },
+      "id": "N8NKgqxPdYuS"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 3. Regress held on Black. What is the slope coefficient Interpret the coefficient on the Black dummy variable: How much more likely is a black person to be held without bail? What is the of the model?"
+      ],
+      "metadata": {
+        "id": "6WFsvs24dbym"
+      },
+      "id": "6WFsvs24dbym"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 4. Before doing this question, please think for a few minutes about how to make the process of running the following regressions as efficient as possible, before jumping into writing code. Repeat part 2, for the following specifications, keeping track of the coefficient on the Black dummy variable each time:\n",
+        "- held on Black and sex\n",
+        "- held on Black and sex and is_poor\n",
+        "- held on Black and sex and is_poor and prior_F\n",
+        "- held on Black and sex and is_poor and prior_F and case_type\n",
+        "### What happens to the coefficient on the Black dummy variable as you include more regressors/features/controls in the regression? Explain your findings."
+      ],
+      "metadata": {
+        "id": "qIGeTnyDdfro"
+      },
+      "id": "qIGeTnyDdfro"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 5. Suppose we don't want to see just Black and sex, but Black interacted with sex: Are Black men and Black women treated systemically differently from the rest of the population? Implement this in a regression, and explain your findings."
+      ],
+      "metadata": {
+        "id": "tHT6A4fQdm9H"
+      },
+      "id": "tHT6A4fQdm9H"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 6. Imagine someone argued we should use these kinds of models to help a judge or magistrate make bail decisions (you could obviously go back and make this kind of model for the bond and sentence variables, then deploy it on new cases to predict what their bond and sentence values would be). What concerns would you have? Do you think society should be using data-driven and automated tools like that? Explain your concerns clearly."
+      ],
+      "metadata": {
+        "id": "UyYL-dgHdrf-"
+      },
+      "id": "UyYL-dgHdrf-"
+    },
+    {
+      "cell_type": "markdown",
       "id": "d0bedb79-b3d9-4db3-9b30-b92c9b618cec",
       "metadata": {
         "id": "d0bedb79-b3d9-4db3-9b30-b92c9b618cec"
