--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -2003,9 +2003,9 @@
     {
       "cell_type": "code",
       "source": [
-        "# From part 4 to 5, the coefficient of Review Scores Rating decreases from 1.03 to 0.63. Part 4 differs from part 5 because we add the variable \"Room Type\" to the regression.\n",
-        "# The coefficient decreases as a result as other variables lose predictive value when other variables like \"Room Type\" are added (some of the price variation now comes from \"Room Type\" now,\n",
-        "# not just \"rating\" and \"neighborhood\"."
+        "# From part 4 to 5, the coefficient of Review Scores Rating decreases from 1.03 to 1.01. Part 4 differs from part 5 because we add the variable \"Property Type\" to the regression.\n",
+        "# The coefficient decreases as a result as other variables lose predictive value when other variables like \"Property Type\" are added\n",
+        "# (some of the price variation now comes from \"Property Type\" now, not just \"rating\" and \"neighborhood\"."
       ],
       "metadata": {
         "id": "EWwJrAAvbSLl"
